Add creation date to statements lists on Dashboard

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -49,6 +49,7 @@
                                                     .setAction('detail')
                                                     .setEntityId(statement.id) }}">{{ statement.month|month_name }} {{ statement.year }}</a>
                                             </td>
+                                            <td>created: {{ statement.created|date }}</td>
                                         </tr>
                                     {% endfor %}
                                 </table>
