Add navigation to invoice history

--- a/templates/admin/Invoice/history.html.twig
+++ b/templates/admin/Invoice/history.html.twig
@@ -46,6 +46,7 @@
             font-size: 1.2em;
         }
     </style>
+    <div>{{ invoice_history_navigation(year) }}</div>
 
     <div class="text-right"><a target="enlace-fiscal" href="https://portal.enlacefiscal.com/comprobantes/factura">
             EnlaceFiscal <i class="fa fa-external-link"></i></a></div>
