Add navigation to payment history and fix distinction of invoices and receipt in repository method

--- a/templates/admin/Payment/history.html.twig
+++ b/templates/admin/Payment/history.html.twig
@@ -74,6 +74,7 @@
         }
 
     </style>
+    <div>{{ payment_history_navigation(year) }}</div>
 
     <div style="margin-bottom: 4px;" class="select-container">
         Restrict to customer:
