Add expenses navigation

--- a/templates/admin/Expense/history.html.twig
+++ b/templates/admin/Expense/history.html.twig
@@ -76,6 +76,8 @@
     </style>
 {#    <div>{{ payment_history_navigation(year) }}</div>#}
 
+    <div>{{ expenses_history_navigation(year) }}</div>
+
     <div style="margin-bottom: 4px;" class="select-container">
         Restrict to account:
         <select id="account-selector">
