--- a/templates/admin/Invoice/history.html.twig
+++ b/templates/admin/Invoice/history.html.twig
@@ -48,7 +48,7 @@
     </style>
     <div>{{ invoice_history_navigation(year) }}</div>
 
-    <div class="text-right">
+    <div class="text-right" style="float: right;">
         <a href="{{ path('admin_invoice_fetch') }}">
             <i class="fa fa-sync"></i> sync latest invoices</a> |
         <a target="enlace-fiscal" href="https://portal.enlacefiscal.com/comprobantes/factura">
