Fix display of family member icons

--- a/templates/admin/fields/familyMemberIcon.html.twig
+++ b/templates/admin/fields/familyMemberIcon.html.twig
@@ -1,3 +1,4 @@
 {% if field.value %}
-    <i style="font-size: 32px" class="demo-icon icon-{{ field.value }}"></i>
+    <i style="font-size: 32px" class="demo-icon icon-jorgo"></i>f{{ field.value }}
 {% endif %}
+<i style="font-size: 32px" class="demo-icon icon-jorgo"></i>
