--- a/templates/admin/Statement/_cardInvoices.html.twig
+++ b/templates/admin/Statement/_cardInvoices.html.twig
@@ -9,19 +9,27 @@
                 {% for customer, invoices in customerInvoices %}
                     {% set isActive = invoices[0].customer.isActive %}
                     <tr class="table-active customer-row">
-                        <th colspan="9"{% if not isActive %} style="opacity:.4;"{% endif %}><i class="fas fa-caret-right"></i> {{ customer }}</th>
+                        <th colspan="9"{% if not isActive %} style="opacity:.4;"{% endif %}><i
+                                    class="fas fa-caret-right"></i> {{ customer }}</th>
                     </tr>
                     {% for invoice in invoices %}
                         <tr data-droppable-id="{{ invoice.id }}" data-droppable-type="invoice"
                             class="detail-row invoice draggable{% if invoice.unpaid %} unpaid{% endif %}"
                             title="{{ loop.index }}"
                         >
-                            <td class="drag-handle" title="Drag to move"><i class="fa fa-arrows-alt"></i> {{ loop.index }}</td>
+                            <td class="drag-handle" title="Drag to move"><i
+                                        class="fa fa-arrows-alt"></i> {{ loop.index }}</td>
                             <td class="nowrap">
                                 {% if invoice.year is not null %}
                                     {{ invoice.year }}-{{ "%02d"|format(invoice.month) }}
                                 {% else %}
                                     {{ invoice.issueDate|date('Y-m-d') }}
+                                {% endif %}
+                                {% if invoice.paymentDate %}
+                                    <div>
+                                        <span class="badge badge-info title-on-hover"
+                                              title="funds have been transferred but not consolidated">{{ invoice.paymentDate|date('Y-m-d') }}</span>
+                                    </div>
                                 {% endif %}
                             </td>
                             <td class="nowrap">{{ invoice.series }}-{{ invoice.number }}</td>
@@ -47,13 +55,13 @@
                             <td class="text-right">{{ invoice.amount|cent_amount }}</td>
                             <td class="text-right">{{ invoice.displayStatus|invoice_status }}</td>
                             <td class="text-right" style="white-space: nowrap"><a target="download" class="text-danger"
-                                                      href="{{ path('admin_invoice_download', {invoice:invoice.id}) }}"><i
+                                                                                  href="{{ path('admin_invoice_download', {invoice:invoice.id}) }}"><i
                                             class="fa fa-file-pdf"></i></a>
                                 <a href="{{ ea_url()
                                     .setController('App\\Controller\\Admin\\InvoiceCrudController')
                                     .setAction('detail')
                                     .setEntityId(invoice.id) }}"><i class="fa fa-eye"></i></a>
-                                {% if invoice.status == constant('App\\Constant\\InvoiceStatus::CANCELADO')%}
+                                {% if invoice.status == constant('App\\Constant\\InvoiceStatus::CANCELADO') %}
                                     <a title="link to statement"
                                        href="{{ ea_url()
                                            .setController('App\\Controller\\Admin\\DocumentCrudController')
